# lib_scraping

./: README.md  books_db.csv  lib_scrapping.py  pyproject.toml  urls.txt
lib_scraping/: lib_scrapping.py  practiceJP.ipynb
