[tool.poetry]
name = "lib-scraping"
version = "0.1.0"
description = "Project for scraping Ghandi's website"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.15.2"
fake-useragent = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
